[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-niche"
version = "0.1.4"
description = "Querying functional and structural niches on spatial transcriptomics data"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Mo Chen", email = "mochenthu@gmail.com" }
]
requires-python = ">=3.8,<4.0"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy==1.23.4",
  "pandas==2.2.1",
  "scipy==1.9.1",
  "scanpy==1.9.8",
  "squidpy==1.4.1",
  "networkx==3.2.1",
  "scikit-learn==1.4.1.post1",
  "umap-learn==0.5.5",
  "anndata==0.10.6",
  "leidenalg==0.10.2",
  "igraph==0.11.4",
  "graphcompass==0.2.2",
  "torch>=2.2.1",
  "torch-geometric>=2.5.2",
]

[tool.setuptools]
# map models/ and bench/ to quest and quest.bench
package-dir = { "quest" = "models", "quest.bench" = "bench" }
packages    = ["quest", "quest.bench"]

